--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -8,7 +8,7 @@
         <a mat-button [routerLink]="'/alignment-manager'"> Manage alignments </a>
         <a mat-button [routerLink]="'/dashboard'"> Dashboard </a>
         <a mat-button [routerLink]="'/settings'"> Settings </a>
-        <a mat-button [routerLink]="'/help'"> Help </a>
+        <a mat-button [routerLink]="'/about'"> About </a>
     </div>
     <div>
         <mat-form-field floatLabel=never class="searchBar">
