rename Download JSON button to more intuitive Download Alignment JSON

--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -52,8 +52,8 @@
       <div class="widget-control">
         <ul class="widget-control">
           <li><button mat-raised-button (click)="saveAlignment()" color="primary" class="widget-control-button">Save</button>
+              <button mat-raised-button (click)="downloadAlignedJson()" color="primary" class="widget-control-button">Download Alignment JSON</button>
               <button mat-raised-button (click)="downloadAlignedFasta()" color="primary" class="widget-control-button">Download FASTA</button>
-              <button mat-raised-button (click)="downloadAlignedJson()" color="primary" class="widget-control-button">Download JSON</button>
               <button mat-raised-button (click)="downloadPhyloNewick()" color="primary" class="widget-control-button">Download Newick</button>
           </li>
           <li><button mat-raised-button (click)="doShowDistanceMatrix()" color="{{ showDistanceMatrixColor }}"
