--- a/src/app/components/alignment-manager/alignment-manager.component.css
+++ b/src/app/components/alignment-manager/alignment-manager.component.css
@@ -2,7 +2,7 @@
   /*width: 100%;*/
   /*height: 90%;*/
   display: flex;
-  align-items: center;
+  align-items: top;
 }
 
 .upload-content {
@@ -10,11 +10,13 @@
   /*margin: auto;*/
   margin: 20px;
   display: block;
+}
+
+::ng-deep .upload-content mat-card, ::ng-deep .selection-content mat-card{
   padding: 10px;
 }
 
 ::ng-deep .selection-content mat-card {
-  padding: 10px;
   margin: 20px;
   display: block;
 }
@@ -22,11 +24,15 @@
 .selection-content {
   width: fit-content;
   /*margin: auto;*/
-  margin: 20px;
   display: block;
 }
 
 .alignment-manager-action-button {
   margin-left: 4px;
   margin-right: 4px;
+}
+
+.narrow-field {
+  max-width: 300px;
+  display: block;
 }
