--- a/src/app/components/data-upload/data-upload.component.css
+++ b/src/app/components/data-upload/data-upload.component.css
@@ -2,7 +2,7 @@
   /*width: 100%;*/
   /*height: 90%;*/
   display: flex;
-  align-items: center;
+  align-items: top;
 }
 
 .upload-content {
@@ -19,6 +19,10 @@
 .selection-content {
   width: fit-content;
   /*margin: auto;*/
-  margin: 20px;
+  display: block;
+}
+
+.narrow-field {
+  max-width: 300px;
   display: block;
 }
