manage dataset selection content margin css fix

--- a/src/app/components/data-upload/data-upload.component.css
+++ b/src/app/components/data-upload/data-upload.component.css
@@ -16,6 +16,11 @@
   padding: 10px;
 }
 
+::ng-deep .selection-content mat-card {
+  margin: 20px;
+  display: block;
+}
+
 .selection-content {
   width: fit-content;
   /*margin: auto;*/
