redirect to dact page when clicking on dact logo in about page

--- a/src/app/components/about-page/about-page.component.html
+++ b/src/app/components/about-page/about-page.component.html
@@ -44,10 +44,12 @@
         </p>
       </div>
     <footer>
-      <img 
-        src="https://dact-chant.ca/images/DACT-logo-Nov2-2019-2.png" 
-        alt="DACT Project Logo" 
-        class="dact-logo" 
-      />
+      <a href="https://dact-chant.ca/" target="_blank" rel="noopener noreferrer">
+        <img 
+          src="https://dact-chant.ca/images/DACT-logo-Nov2-2019-2.png" 
+          alt="DACT Project Logo"
+          class="dact-logo" 
+        />
+      </a>
     </footer>
   </div>
