Add cantus id column to the chant list

--- a/src/app/components/chant-list/chant-list.component.css
+++ b/src/app/components/chant-list/chant-list.component.css
@@ -20,3 +20,9 @@ button {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+
+
+table td, table th {
+  padding-left: 5px;
+  padding-right: 5px;
+}
