enable hiding chants without volpiano when filtering the chant list

--- a/src/app/components/search-filter/search-filter.component.html
+++ b/src/app/components/search-filter/search-filter.component.html
@@ -15,6 +15,10 @@
                         [(ngModel)]="hideIncompleteChants">
             Hide incomplete chants
           </mat-checkbox>
+          <mat-checkbox class="genre-checkbox"
+                        [(ngModel)]="hideChantsWithoutVolpiano">
+            Hide chants without Volpiano
+          </mat-checkbox>
 
           <h3>Genres</h3>
           <mat-checkbox
