anonymize the about page

--- a/src/app/components/about-page/about-page.component.html
+++ b/src/app/components/about-page/about-page.component.html
@@ -25,7 +25,7 @@
   
     <section class="history">
       <h2>Project Origins</h2>
-      <p>
+      <p>Details about project history, project authors and contacts have been omitted to maintain anonymity during the review process.</p>      <!--<p>
         ChantLab started as a <strong>bachelor thesis</strong> by Kristína Szabová. Her work, titled 
         "<i>Analytical Tools for Gregorian Chant</i>" (2021), laid the foundation for this platform. 
         <a href="https://dspace.cuni.cz/bitstream/handle/20.500.11956/148285/130315702.pdf" target="_blank">
@@ -34,9 +34,9 @@
       <p>
         Today, ChantLab is being developed under the <strong>Digital Analysis of Chant Transmission (DACT)</strong>. This project, funded by the Social Sciences and Humanities Research Council of Canada, 
         aims to advance the study of chant dissemination using computational tools.
-      </p>
+      </p>-->
     </section>
-    <br>
+    <!--<br>
     <div class="project-info">
         <p>
             Explore more about the project, its goals and contacts on our
@@ -51,5 +51,5 @@
           class="dact-logo" 
         />
       </a>
-    </footer>
+    </footer>-->
   </div>
