--- a/src/app/components/chant-list/chant-list.component.html
+++ b/src/app/components/chant-list/chant-list.component.html
@@ -40,6 +40,7 @@
           <th>Source</th>
           <th>Genre</th>
           <th>Office</th>
+          <th>Mode</th>
           <th>Dataset name</th>
         </tr>
         <ng-container *ngFor="let chant of chants; let i = index">
@@ -62,6 +63,7 @@
             <td>{{ chant.siglum }}, {{ chant.folio }}, {{ chant.position }}</td>
             <td>{{ getGenreName(chant.genre_id) }}</td>
             <td>{{ getOfficeName(chant.office_id) }}</td>
+            <td>{{ chant.mode }}</td>
             <td>{{ chant.dataset_name }}</td>
           </tr>
         </ng-container>
