support keeping liquescents via frontend (button at chant list -> chant alignment then contains liquescents)

--- a/src/app/components/chant-list/chant-list.component.html
+++ b/src/app/components/chant-list/chant-list.component.html
@@ -28,8 +28,14 @@
       </mat-checkbox>
       <mat-checkbox
         class="margin-right"
+        style="margin-right: 30px;"
         [(ngModel)]="concatenatedMode">
         Concatenated alignment
+      </mat-checkbox>
+      <mat-checkbox
+        class="margin-right"
+        [(ngModel)]="keepLiquescents">
+        Keep liquescents
       </mat-checkbox>
 
       <table>
