change distance matrix colors - make diagonal gray, better contrast of green and red

--- a/src/app/components/distance-matrix/distance-matrix.component.html
+++ b/src/app/components/distance-matrix/distance-matrix.component.html
@@ -12,7 +12,7 @@
       <td class="distance-matrix-header-column">{{ getShortName(name1) }}</td>
       <td class="distance-matrix distance-matrix-cell"
           *ngFor="let name2 of names"
-          style="background-color: rgb({{ backgroundColorRGB(allDistances.get(name1).get(name2)) }})"
+          [style.background-color]="name1 === name2 ? '#e0e0e0' : 'rgb(' + backgroundColorRGB(allDistances.get(name1).get(name2)) + ')'"
           (click)="selectCell(name1, name2)"
           (mousedown)="showCellName(name1, name2)"
           (mouseup)="hideCellName(name1, name2)"
